# MusicStyleAnalysis__ML

./: .env.example  .gitignore  ABOUT.md  CHANGELOG.md  CLAUDE.md  EXAMPLES.md  README.md  SECURITY.md  TECHNICAL_OVERVIEW.md  create_test_audio.py  find_models.py  pyproject.toml  requirements.txt  training_data.csv
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml  version.yml
src/: __init__.py  __main__.py  api_client.py  audio_loader.py  genre_database.py  genre_detector.py  ml_trainer.py  music_generator.py  style_analyzer.py
tests/: __init__.py  test_api_client.py  test_audio_loader.py  test_genre_database.py  test_genre_detector.py  test_ml_trainer.py  test_style_analyzer.py
